iptables.before.txt
# Generated by iptables-save v1.4.21 on Sun Oct  9 13:49:22 2022
*nat
:PREROUTING ACCEPT [27:1464]
:INPUT ACCEPT [27:1464]
:OUTPUT ACCEPT [229:24002]
:POSTROUTING ACCEPT [229:24002]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 162.20.5.0/24 ! -o docker0 -j MASQUERADE ------------------------>
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Oct  9 13:49:22 2022
# Generated by iptables-save v1.4.21 on Sun Oct  9 13:49:22 2022
*filter
:INPUT ACCEPT [31778:146621408]
:FORWARD DROP [0:0] -------------------->Drop
:OUTPUT ACCEPT [29440:1565920]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sun Oct  9 13:49:22 2022
